feat: add tests

--- a/homework_18.09.24/null_elements/null_elements.vcxproj
+++ b/homework_18.09.24/null_elements/null_elements.vcxproj
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="null_elements.cpp" />
+    <ClCompile Include="null_elements.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
