fix: fixed the margins

--- a/homework_18.09.24/Incomplete quotient/Incomplete quotient.vcxproj
+++ b/homework_18.09.24/Incomplete quotient/Incomplete quotient.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{7601d573-36aa-4d6b-9e8a-f7e3e19dc8d4}</ProjectGuid>
     <RootNamespace>Incompletequotient</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>incompleteQuotient</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -127,7 +128,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Incomplete quotient.c" />
+    <ClCompile Include="incompleteQuotient.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
