--- a/homework_18.09.24/Incomplete quotient/Incomplete quotient.vcxproj.filters
+++ b/homework_18.09.24/Incomplete quotient/Incomplete quotient.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Incomplete quotient.c">
+    <ClCompile Include="incompleteQuotient.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
